Fixed off-center block-v2

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ body {
 
 .content {
   height: 100%;
-  padding: 0 55px 30px 20px;
+  padding: 0 35px 30px 30px;
   text-align: center;  
   font-size: 16px;
 }
